--- a/land page/style.css
+++ b/land page/style.css
@@ -8,30 +8,58 @@ body{
 }
 
 .container{
-height:100vh;
-width: 100vw;
-background-color: rgb(14, 137, 194);
-background-repeat: no-repeat;
-background-position: center;
-background-size: contain;
-display: flex;
-flex-direction: column;
-justify-content:center;
-align-items: flex-start;
-box-sizing: border-box;
-padding:0 112px;
-position:relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    overflow: hidden;
+    background-color: rgb(18, 169, 207);
+    }
 
+
+.name{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1{
     font-size: 50px;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    
+    display: flex; 
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    text-align-last: justify;
+    
+    padding:0;
+}
+
+h3{
+    display: flex;  
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    text-align-last: justify;
+    padding: 0;
+}
+
+img{
+    border-radius: 40%;
+    width: 60%;
+    height: 40%;
+    padding: 1px ;
+    border: 1px solid black;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
+    
 }
 
 .social-media{
-    margin-top: 1rem;
+    margin-top: 6rem;
     display: flex;
 
 }
@@ -52,133 +80,28 @@ a:hover{
     background-color: rgb(255, 255, 255);
 }
 
-
-.checkbox-container{
-    display: flex;
-    justify-content:center;
-    align-items:center;
+@media(max-width: 950px){
+    .container{
+        flex-direction: column;
+    }
+    .name{
+        width:400px;
+        align-content: center;
+        align-items: center;
+    }
+    .name h1 h3{
+        height: 75px;
+        font-size: 20px;
+    }
 }
 
-.checkbox-menu{
-    height:100px;
-    width:100px;
-    position:absolute;
-    right:0;
-    top:0;
-    display: flex;
-    justify-content:center;
-    cursor:pointer;
-    z-index:9999;
-    transition: 400ms ease-in-out;
-}
-
-.checkbox .trace{
-    width:50px;
-    height:2px;
-    background-color:black;
-    position:absolute;
-    border-radius: 4px;
-    transition:0.5s ease-in-out;
-    text-decoration: none;
-}
-
-.checkbox-menu .trace:nth-child(1){
-    top: 26px;
-    transform: rotate(0)
-}
-
-.checkbox-menu .trace:nth-child(2){
-    top: 46px;
-    transform: rotate(0)
-}
-
-
-.checkbox-menu .trace:nth-child(3){
-    top: 66px;
-    transform: rotate(0)
-}
-
-#toggle{
-display: none;  
-}
-
-.menu{
-    position:absolute;
-    top:28px;
-    right:30px;
-    background-color:transparent;
-    height:4px;
-    width:10px;
-    border-radius:50%;
-    box-shadow: 0px 0px 0px 0px white;
-    z-index: -1;
-    transition: 400ms ease-in-out 0s;
-}
-
-.menu-itens{
-    position:fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    z-index: 2;
-    opacity:0;
-    visibility:hidden;
-    transition: 400ms ease-in-out 0s;
-}
-
-.menu-itens ul{
-    list-style-type: none;
-}
-
-.menu-itens ul li a{
-    margin: 10px 0;
-    color:black;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-img{
-    width:300px;
-    height:40;
-    margin:0;
-    padding:1px;
-    border: 2px solid rgb(27, 4, 4);
-    border-radius: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
-}
-
-#toggle:checked + .checkbox .trace:nth-child(1){
-    transform: rotate(45deg);
-    top: 47px;
-}
-
-#toggle:checked + .checkbox .trace:nth-child(2){
-    transform: translate(-100px);
-    width:30px;
-    visibility:hidden;
-    opacity:0;
-}
-#toggle:checked + .checkbox .trace:nth-child(3){
-    transform: rotate(-45deg);
-    top:48px;
+@media(max-width:500px){
+    .img{
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
+    }
     
 }
 
-#toggle:checked + .checkbox {
-    background-color:white;
-
-}
-
-#toggle:checked ~ .menu{
-    box-shadow: 0px 0px 0px 100vmax white;
-    z-index: 1;
-}
-
-#toggle:checked ~ .menu-itens{
-    visibility:visible;
-    opacity: 1;
-}
