--- a/land page/style.css
+++ b/land page/style.css
@@ -1,66 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-body{
-    margin:0;
-    padding:0;
-    font-family: 'Poppins' , sans-serif;
-    color:rgb(14, 9, 36)
+*{
+    padding: 0;
+    margin: 0;
+}
+
+h1{
+    display: flex;
+    align-content: center;
+    justify-content:center;
+}
+
+h3{
+    display: flex;
+    align-content: center;
+    justify-content:center;
+}
+
+.img{
+    width:30px;
+    height:21px;
+    display: flex;
+    align-items: center;
+    justify-items:center;
+    
+    
+    
 }
 
 .container{
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: space-around;
+    background-color:#12a9cf;
     align-items: center;
-    overflow: hidden;
-    background-color: rgb(18, 169, 207);
-    }
-
-
-.name{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-h1{
-    font-size: 50px;
-    text-transform: uppercase;
-    
-    display: flex; 
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    text-align-last: justify;
-    
-    padding:0;
-}
-
-h3{
-    display: flex;  
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    text-align-last: justify;
-    padding: 0;
-}
-
-img{
-    border-radius: 40%;
-    width: 60%;
-    height: 40%;
-    padding: 1px ;
-    border: 1px solid black;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
-    
+    justify-content:center;
 }
 
 .social-media{
     margin-top: 6rem;
     display: flex;
+    margin: 20px;
+
 
 }
 
@@ -74,34 +54,10 @@ img{
     align-items: center;
     justify-content:center;
     transition: .5s ease-in-out;
+    
+  
 }
 
 a:hover{
     background-color: rgb(255, 255, 255);
 }
-
-@media(max-width: 950px){
-    .container{
-        flex-direction: column;
-    }
-    .name{
-        width:400px;
-        align-content: center;
-        align-items: center;
-    }
-    .name h1 h3{
-        height: 75px;
-        font-size: 20px;
-    }
-}
-
-@media(max-width:500px){
-    .img{
-        display: flex;
-        flex-direction: column;
-        justify-content:center;
-        align-items: center;
-    }
-    
-}
-
